Fixed broken layout on text-input in .list__item element.

--- a/css-components/components-src/stylus/components/util.styl
+++ b/css-components/components-src/stylus/components/util.styl
@@ -12,6 +12,7 @@ reset-base()
   color inherit
   background transparent
   border none
+  line-height normal
 
 reset-list()
   padding 0
@@ -29,6 +30,7 @@ reset-input()
   reset-box-model()
   vertical-align top
   outline none
+  line-height 1
 
 hide-input()
   position absolute
